# LiftingCastScraper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
LiftingCastScraper/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  todo.txt
LiftingCastScraper/src/liftingcastscraper/: __init__.py  pipeline.py
LiftingCastScraper/src/liftingcastscraper/opl_ipf/: fetcher.py  lookup.py
LiftingCastScraper/src/liftingcastscraper/reports/: html_report.py
LiftingCastScraper/src/liftingcastscraper/scraper/: __init__.py  playwright_scraper.py  utils.py
LiftingCastScraper/src/liftingcastscraper/server/: __init__.py  main.py
app/: streamlit_app.py
git_parent_backup/: sourcetreeconfig
liftingcast-extension/: manifest.json  popup.css  popup.html  popup.js
opl/: __init__.py  opl_api.py
opl_ipf/: __init__py  fetcher.py  lookup.py
reports/: html_report.py
scraper/: __init__.py  playwright_scraper.py  selenium_scraper.py  utils.py
src/: todo.txt
src/liftingcastscraper/: __init__.py  main.py  pipeline.py
src/liftingcastscraper/opl_ipf/: __init__py
src/liftingcastscraper/reports/: __init__.py
src/liftingcastscraper/scraper/: __init__.py  selenium_scraper.py  utils.py
src/server/: main.py
