[project]
name = "liftingcastscraper"
version = "0.1.0"
description = "LiftingCast → OpenPowerlifting scraper"
authors = [{name = "You"}]
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "playwright>=1.34.0",
    "psutil >=5.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
